--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,7 @@
   "trailingComma": "all",
   "overrides": [
     {
-      "files": "*.sol",
+      "files": "*.ts,*.js,*.json,*.md,*.sol",
       "options": {
         "tabWidth": 4
       }
