--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "chai": "^4.3.4",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.3.1",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "ethereum-waffle": "^3.4.0",
@@ -85,6 +85,10 @@
     "typechain": "hardhat typechain"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.2.0"
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@openzeppelin/contracts": "^4.2.0",
+    "hardhat-typechain": "^0.3.5",
+    "path": "^0.12.7"
   }
 }
